chrome/android: Update toolbar drawing in native.

Add a ToolbarResource to push relevant info for drawing the toolbar to
native. This replaces the previous use of NinePatchResource for this.
And some cleanup in ToolbarLayer.

BUG=700454

Review-Url: https://codereview.chromium.org/2752693003
Cr-Commit-Position: refs/heads/master@{#458831}

Former-commit-id: 51b27db46a139e5b7ae668cf22b23f5f434d05f7