ui/android/resources/nine_patch_resource.h
@@ -8,6 +8,11 @@
 #include "ui/android/resources/resource.h"
 #include "ui/android/ui_android_export.h"
 #include "ui/gfx/geometry/insets_f.h"
+#include "ui/gfx/geometry/point_f.h"
+
+namespace cc {
+class NinePatchLayer;
+}
 
 namespace ui {
 
@@ -19,6 +24,20 @@ class UI_ANDROID_EXPORT NinePatchResource final : public Resource {
   ~NinePatchResource() override;
 
   std::unique_ptr<Resource> CreateForCopy() override;
+
+  // Returns the drawing size that the resource will take for padding content
+  // of size |content_size|.
+  gfx::Size DrawSize(const gfx::Size& content_size) const;
+
+  // Returns the position where the resource should be drawn to account for
+  // margins, given the |content_position| in the parent's coordinate space.
+  gfx::PointF DrawPosition(const gfx::Point& content_position) const;
+
+  // Updates draw properties on |layer| used to draw this resource. The
+  // |content_location| is the rect of the content to be fit inside the resource
+  // in the parent's coordinate space.
+  void UpdateNinePatchLayer(cc::NinePatchLayer* layer,
+                            const gfx::Rect& content_location) const;
 
   gfx::Rect Border(const gfx::Size& bounds) const;
   gfx::Rect Border(const gfx::Size& bounds, const gfx::InsetsF& scale) const;
